# This file is only for building binary packages by cibuildwheel.
# Everything else is in setup.py.

[build-system]
# must be given here, see https://github.com/pypa/cibuildwheel/issues/404
requires = ["setuptools", "numpy", "scipy", "cython"]


[tool.cibuildwheel]
build-verbosity = 1

# colored output where possible
environment.FORCE_COLOR = 1

# don't try to compile NumPy and SciPy from source
environment.PIP_ONLY_BINARY = ":all:"

# Linux also tries to build i686 (but there are no binary packages for it)
archs = "native"
# "manylinux" should be enough
skip = "*musllinux*"

test-requires = "pytest"
# calling pytest directly uses wrong python;
# results can be copied to output (with meaningful name) only manually
test-command = """
  python -m pytest --pyargs abel --junit-xml=pytest.xml; \
  python {package}/.github/workflows/save-test.py {package} {wheel}
"""
